Revision history for {{$dist->name}}

{{$NEXT}}
           Tweaked Authortests/Release tests bundling somewhat
            so they actually work.

           Added Perl Critic tests and satisfied criteria.

           Documenting the hell out of the Objdump default 
            scanner, partially to see how CPAN renders this 
            abuse. With a bit of luck, it will produce mean 
            as API breakdowns for me :)

0.0104    2009-08-21 17:34:29 UTC
           Fixed Extrac typo which lead to dual indexing.
           Dist::Zilla automatic tests now included.

0.0103    2009-07-19 14:59:11 UTC
           Muted warning in tests
           Moved to Dist::Zilla instead of MI
           Updated to MooseX::Has::Sugar 0.0300

0.0102     Dependancy Fixups, yes, more of them.

0.0101     Re-Release with fixed inc/
           using MX::Has::Sugar
           dropped Hard dependancy on Perl 5.10

0.01.00    Mon May 11 02:04:58 UTC 2009
           First Version. Mostly working.
