@@ -1,37 +1,44 @@
 name    = ELF-Extract-Sections
-version = 0.0105
 author  = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric
 ;abstract = Extract Raw Chunks of data from identifiable ELF Sections
 
 [AllFiles]
+[AutoVersion::Relative]
+major = 0
+minor = 2
+year  = 2009
+month = 05
+day   = 03
+hour  = 09
+time_zone = Pacific/Auckland
+
 [PruneCruft]
 
-[MetaResources]
-repository = git://github.com/kentfredric/ELF-Extract-Sections.git
+[Repository]
 
 [License]
 
 [PkgVersion]
 
-[PodPurler]
+[PodWeaver]
 
 [ReadmeFromPod]
-
-[MetaYAML]
-[MetaJSON]
 
 [MetaProvides::Class]
 [MetaProvides::Package]
 
-[MakeMaker]
+[MetaYAML]
+[MetaJSON]
+
 [ModuleBuild]
 
 [ManifestSkip]
 
 [Manifest]
 
+[CompileTests]
 [MetaTests]
 [PodTests]
 [ExtraTests]
