@@ -1,7 +1,0 @@
-#!perl
-
-use Test::More tests => 1;
-
-use ok 'ELF::Extract::Sections';
-
-diag( "Testing ELF::Extract::Sections $ELF::Extract::Sections::VERSION, Perl $], $^X" );
